# sports

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  HOURLY_AUTOMATION_SETUP.md  HW6b_Report.md  PREDICTION_DATA_MANAGEMENT.md  QUICK_START_FORWARD_TESTING.md  README.md  README_FORWARD_TESTING.md  ResultadosFutebolTreino.csv  SCHEDULED_TASKS_STATUS.md  SETUP_SCHEDULED_TASKS.md  all_games.txt  apply_schema.py  backfill_missing_scores.py  betting_db_nba.txt  betting_db_nba_fixed.txt  betting_db_nba_fixed2.txt  betting_schema.txt  check_all_sports.py  check_api_history.py  check_api_stats.py  check_chelsea_games.py  check_columns.py  check_columns_line.py  check_completed.py  check_cremonese_duplicates.py  check_dashboard_output.py  check_date_range.py  check_db.py  check_db_nba.py  check_epl_duplicates.py  check_files.py  check_game_details.py  check_game_results.py  check_games_table.py  check_green_bay_game.py  check_live_scores.py  (+98 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
assets/: moneyline-click.js
config/: betting_benchmark.yml  published_rules.yml  sources.yml  versions.yml
docs/: ARCHITECTURE.md  AUTOMATION.md  BACKUP_RESTORE.md  CLAIM_EVIDENCE.md  DATA_QUALITY_REVIEW.md  DEPLOYMENT.md  FEATURE_IMPORTANCE_SUMMARY.md  FIXES_SUMMARY.md  HOURLY_AUTOMATION_SETUP.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  ML_PIPELINE_STATE.md  PIPELINE.md  PREDICTION_QUALITY.md  QUICK_START_FORWARD_TESTING.md  README_FORWARD_TESTING.md  RUNBOOK.md  TASKS_VERIFICATION_COMPLETE.md  TEST_RESULTS.md  confidence_validation.md  dashboard.md  data-sources.md  database-schema.md  database.md  kaggle-setup.md  modeling-pipeline.md  nba_enhancements.md  product_requirements.md  scheduled_tasks_setup.md  scraping_blockages.md  soccer_feature_schema.md  software_requirements_specification.md  storage-layout.md
scripts/: add_indexes.py  analyze_density.py  analyze_games_to_delete.py  analyze_odds_distribution.py  archive_and_purge.py  backfill_ensemble_ncaab.py  backfill_odds.py  backfill_odds_coverage.py  backfill_odds_simple.py  backfill_scores_dec2025.py  backfill_scores_espn.py  backfill_totals.py  backup_data.py  backup_db.py  backup_predictions.py  backup_to_s3.sh  check_db_state.py  check_orphan_odds.py  check_orphan_predictions.py  check_sports.py  clean_and_version.py  cleanup_bad_data.py  cleanup_duplicates.py  cleanup_orphan_predictions.py  cleanup_orphans.py  compare_v3_games.py  copy_results.py  db_stats.py  debug_api.py  debug_columns.py  debug_filter.py  (+60 more)
(+413 files in other folders)
